# VulkanTools-ForSC

./: .travis.yml  BUILD.md  CMakeLists.txt  LICENSE.txt  README.md  update_external_sources.sh  vk-vtlayer-generate.py  vk_helper_api_dump.py
build-android/: android-generate.bat  android-generate.sh  build_all.sh  build_vktracereplay.bat  build_vktracereplay.sh  create_trace.sh  test_vktracereplay.sh  vktracereplay.bat  vktracereplay.sh
demos/: CMakeLists.txt  cube.c  cube.cpp  vulkaninfo.c  vulkanspoofedinfo.c
jsonGenLayerTests/: jsonGenLayerTests.py  main.cpp
layer_factory/: CMakeLists.txt
layermgr/: CMakeLists.txt  active_layers_widget.cpp  active_layers_widget.h  data.qrc  layer_locations_widget.cpp  layer_manager.cpp  layer_manager.h  layer_manager.md  layer_manifest.cpp  layer_manifest.h  layer_settings_widget.cpp  layer_settings_widget.h  override_settings.cpp  override_settings.h
layers/: CMakeLists.txt  VkLayer_device_profile_api.def  VkLayer_spoof.def  device_profile_api.cpp  spoof.cpp  unique_objects.cpp
layersvt/: CMakeLists.txt  README.md  VkLayer_api_dump.json.in  VkLayer_device_simulation.json.in  VkLayer_screenshot.json.in  api_dump.h  device_simulation.cpp  json_layer_README.md  vk_layer_settings.txt  vulkan_json_layer.hpp
loader/: CMakeLists.txt  loader.c
scripts/: api_dump_generator.py  json_gen_generator.py  known_good.json  lvl_genvk.py  vktrace_file_generator.py  vktrace_generate.py  vt_genvk.py
tests/: apidump_test.sh  devsim_layer_test.sh  layer_validation_tests.cpp  vktracereplay.py  vlf_test.ps1  vlf_test.sh
via/: via.cpp  via_system_linux.cpp
vkconfig/: CHANGELOG.md  CMakeLists.txt  active_layers_widget.cpp  configurator.cpp  dialog_layers.cpp  layer_manager.cpp  mainwindow.cpp  override_settings.cpp  vkconfig.cpp  vkconfig.md
vkconfig_core/: configuration.cpp  doc.cpp  environment.cpp  layer.cpp  override.cpp  path.cpp  setting.cpp  setting.h
vktrace/: CMakeLists.txt  pmb_support_notes.txt  (+1 more)
vktrace/vktrace_serialization/: CMakeLists.txt  build_protobuf.bat
(+67 files in other folders)
